[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Sprites/Sprite1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Minigames/Pacman/Pac.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Minigames/Pacman/Ghost.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Minigames/Pacman/CherryBomb.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Minigames/Pacman/Peacherang.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Move"
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Up:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 45.0, 0.0, 45.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/Down:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -45.0, 0.0, -45.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Up:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 45.0, 0.0, 45.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Down:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -45.0, 0.0, -45.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Up:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 45.0, 45.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/Down:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -45.0, -45.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Up:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 45.0, 45.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Down:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -45.0, -45.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "MoveFruits"
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 5, 5.5, 6, 6.5, 7, 7.5, 8, 8.5, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 408.676, 359.409, 359.409, 260.874, 260.874, 162.34, 162.34, 63.8056, 63.8056, 113.073, 113.073, 172.193, 172.193, 251.021, 251.021, 408.676, 408.676 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 0.75, 1, 1.5, 1.75, 2, 2.5, 2.75, 3, 3.5, 4, 4.5, 5, 5.5, 5.75, 6, 6.5, 6.75, 7, 7.5, 7.75, 8, 8.5, 9.01, 9.5, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 90.0, 90.0, 0.0, 90.0, 90.0, 0.0, 90.0, 90.0, 0.0, 90.0, 90.0, 0.0, 0.0, 270.0, 270.0, 360.0, 270.0, 270.0, 360.0, 270.0, 270.0, 360.0, 270.0, 270.0, 0.0, 0.0, 90.0 ]
}
tracks/2/type = "animation"
tracks/2/path = NodePath("Animations")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": PoolStringArray( "Move", "idle", "Move", "idle" ),
"times": PoolRealArray( 0, 3.5, 5, 8.5 )
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.8, 1.8, 2.8, 5.7, 6.7, 7.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "peach_summon"
}, {
"args": [  ],
"method": "cherry_summon"
}, {
"args": [  ],
"method": "peach_summon"
}, {
"args": [  ],
"method": "cherry_summon"
}, {
"args": [  ],
"method": "peach_summon"
}, {
"args": [  ],
"method": "cherry_summon"
} ]
}

[sub_resource type="Animation" id=4]
length = 7.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 3.5, 5.5, 7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 408.676, 63.8056, 63.8056, 408.676, 408.676 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 2.5, 3, 3.5, 5.5, 6, 6.5, 7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 90.0, 90.0, 0.0, 0.0, 270.0, 270.0, 0.0, 0.0, 90.0 ]
}
tracks/2/type = "animation"
tracks/2/path = NodePath("Animations")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": PoolStringArray( "Move", "idle", "Move", "idle" ),
"times": PoolRealArray( 0, 2, 3.5, 5.5 )
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 3.5, 3.8, 3.9, 4.1, 4.4, 4.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "ghost_summon"
}, {
"args": [  ],
"method": "ghost_summon"
}, {
"args": [  ],
"method": "ghost_summon"
}, {
"args": [  ],
"method": "ghost_summon"
}, {
"args": [  ],
"method": "ghost_summon"
}, {
"args": [  ],
"method": "ghost_summon"
}, {
"args": [  ],
"method": "ghost_summon"
}, {
"args": [  ],
"method": "ghost_summon"
}, {
"args": [  ],
"method": "ghost_summon"
}, {
"args": [  ],
"method": "ghost_summon"
}, {
"args": [  ],
"method": "ghost_summon"
}, {
"args": [  ],
"method": "ghost_summon"
} ]
}

[sub_resource type="Animation" id=5]
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 2.5, 4.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 408.676, 63.8056, 63.8056, 408.676, 408.676 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 2.5, 4.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 90.0, 90.0, 270.0, 270.0, 90.0 ]
}
tracks/2/type = "animation"
tracks/2/path = NodePath("Animations")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": PoolStringArray( "Move", "idle", "Move", "idle" ),
"times": PoolRealArray( 0, 2, 2.5, 4.5 )
}

[sub_resource type="Animation" id=6]
resource_name = "Nueva Animaci√≥n"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="Pac" type="KinematicBody2D"]
position = Vector2( 670, 408.676 )
rotation = 1.5708
scale = Vector2( 1.2, 1.2 )
collision_mask = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
Ghost = ExtResource( 3 )
CherryBomb = ExtResource( 4 )
Peacherang = ExtResource( 5 )

[node name="Body" type="Sprite" parent="."]

[node name="Up" type="Sprite" parent="Body"]
position = Vector2( 0, 4 )
rotation = 0.785398
scale = Vector2( 1.75, 0.5 )
texture = ExtResource( 1 )

[node name="Up3" type="Sprite" parent="Body/Up"]
position = Vector2( 0, -8 )
scale = Vector2( 0.857143, 1.5 )
texture = ExtResource( 1 )

[node name="Up2" type="Sprite" parent="Body/Up"]
position = Vector2( 0, -18 )
scale = Vector2( 0.642857, 1.875 )
texture = ExtResource( 1 )

[node name="Down" type="Sprite" parent="Body"]
position = Vector2( 0, 4 )
rotation = -0.785398
scale = Vector2( 1.75, -0.5 )
texture = ExtResource( 1 )

[node name="Up3" type="Sprite" parent="Body/Down"]
position = Vector2( 0, -8 )
scale = Vector2( 0.857143, 1.5 )
texture = ExtResource( 1 )

[node name="Up2" type="Sprite" parent="Body/Down"]
position = Vector2( 0, -18 )
scale = Vector2( 0.642857, 1.875 )
texture = ExtResource( 1 )

[node name="Up" type="CollisionPolygon2D" parent="."]
visible = false
rotation = 0.785398
polygon = PoolVector2Array( -21.75, 10.125, -18.75, -2, -14.125, -9.125, -12.125, -16.75, 10.625, -16.75, 14, -9.75, 18.25, -2.75, 21.75, 10.375 )

[node name="Down" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2( 0, 8 )
rotation = -0.785398
scale = Vector2( 1, -1 )
polygon = PoolVector2Array( -21.75, 10.125, -18.75, -2, -14.125, -9.125, -12.125, -16.75, 10.625, -16.75, 14, -9.75, 18.25, -2.75, 21.75, 10.375 )

[node name="HitArea" type="Area2D" parent="."]
scale = Vector2( 1.1, 1.1 )
collision_layer = 0
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HitArea"]
scale = Vector2( 1.1, 1.1 )
polygon = PoolVector2Array( -19.3648, 14.7631, -10.6883, 23.7733, -3.84723, 26.4429, 4.66238, 28.4451, 24.6849, 8.42249, 20.5135, 4.08429, 24.1843, -0.754517, 5.32962, -20.2766, -3.34683, -18.6079, -10.8553, -15.7714, -19.3649, -6.92798 )

[node name="Animations" type="AnimationPlayer" parent="."]
anims/Move = SubResource( 1 )
anims/idle = SubResource( 2 )

[node name="MoveAttack" type="AnimationPlayer" parent="."]
autoplay = "SimpleMove"
anims/MoveFruits = SubResource( 3 )
anims/MoveGhost = SubResource( 4 )
anims/SimpleMove = SubResource( 5 )

[node name="InmunityAnim" type="AnimationPlayer" parent="."]
"anims/Nueva Animaci√≥n" = SubResource( 6 )

[node name="IT" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="HitArea" to="." method="_on_HitArea_area_entered"]
[connection signal="animation_finished" from="MoveAttack" to="." method="_on_MoveAttack_animation_finished"]
[connection signal="timeout" from="IT" to="." method="_on_Timer_timeout"]
